Unreleased

* Add `status_code` field to `Url` model
* Add French translations.

2.1.0 (2023-02-05)

* Fix `SSL Error` for missing root certificates (Timo Ludwig, #157)
* Fix `NotImplementedError`/`AssertionError` when checking
  video links with hash anchors (Timo Ludwig, #150)
* Skip checking of hash anchors for non-html files
* Avoid decorating the `report` view with `csrf_exempt` (#155)
* recheck/ignore/unignore requests were using an obsolete `request.is_ajax` call
  (#147)

2.0.0 (2022-12-17)

* Add German translations for filebrowser integration
* Fix django-filebrowser integration (Timo Ludwig, #144)
* Use `django.db.models.BigAutoField` as default auto field
  (Timo Ludwig, #137)
* Add German translations for the templates
* Fix `type` property for internal URLs (Timo Ludwig, #141)
* Fix incorrect message when redirect has broken anchor
  (Timo Ludwig, #128)
* Breaking change: Treat broken hash anchors as valid
  unless `LINKCHECK_TOLERATE_BROKEN_ANCHOR` is manually
  set to `False` (Timo Ludwig, #98)
* Remove unused field `still_exists` from `Url` model
* Delete outdated `Url` and `Link` objects when
  running `findlinks` command (Timo Ludwig, #101)
* Avoid crash when unexpected error in signal listener occurs
  (Sven Seeberg, #117)
* Ignore Urls longer than `MAX_URL_LENGTH` in signal listeners
  (Timo Ludwig, #115)
* Verify SSL certificates (Timo Ludwig, #118)
* Added support for Python 3.10/3.11 and Django 4.1.
* Dropped support for Python 3.6 and Django < 3.2.

1.9.1 (2022-03-23)

* Added `Linklist.filter_callable` optional hook to allow for more
  flexible link list filtering (Giuliano Mele).

1.9 (2021-12-23)

* Added support for Django 3.2 and 4.0 and removed support for Django < 2.2.
* Ignore raw `pre_save` signal (Timo Ludwig, #106).

1.8.1 (2021-04-01)

* The 1.8 release contained unwanted temporary stuff and was
  therefore a broken release. Many thanks to Stefan Borer for
  noticing that.

1.8 (2021-02-25)
